--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ aiohttp
 async_timeout
 uvloop
 bs4
-sanic
+sanic==0.3.1
 Jinja2>=2.9.5
 arrow
 html5lib
-sanic_session
-asyncio_redis
+sanic-session==0.1.2
+asyncio-redis==0.14.3
