--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,10 @@ aiohttp
 async_timeout
 uvloop
 bs4
-sanic==0.3.1
+sanic>=0.3.1
 Jinja2>=2.9.5
 arrow
 html5lib
-sanic-session==0.1.2
-asyncio-redis==0.14.3
+sanic-session>=0.1.2
+asyncio-redis>=0.14.3
+aiocache>=0.3.2
