--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-aiohttp
-async_timeout
-uvloop
-bs4
-tornado
-sanic>=0.5.1
-Jinja2>=2.9.5
-arrow
-html5lib
-sanic-session>=0.1.2
-asyncio-redis>=0.14.3
+aioredis==0.3.3
 aiocache==0.3.2
-motor>=1.1
-schedule
-gunicorn
+aiohttp
+arrow
+async_timeout
+asyncio-redis>=0.14.3
+bs4
 cchardet
-requests
-talospider
+gunicorn
+html5lib
+Jinja2>=2.9.5
+motor>=1.1
 numpy
+requests
+sanic>=0.5.1
+sanic-session>=0.1.2
+schedule
+talospider
+tornado
+uvloop
