修复：书签跳转阅读某章节会覆盖数据库中最新章节记录

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,12 @@ cchardet
 gunicorn
 html5lib
 Jinja2>=2.9.5
-motor>=1.1
+motor==1.1
 numpy
 requests
 sanic>=0.5.1
 sanic-session>=0.1.2
 schedule
-talospider
+talospider>=0.0.2
 tornado
 uvloop
