--- a/Pipfile
+++ b/Pipfile
@@ -22,7 +22,7 @@ gunicorn = "*"
 "Jinja2" = ">=2.9.5"
 motor = "==1.1"
 numpy = "*"
-requests = "*"
+requests = ">=2.20.0"
 Sanic = ">=0.5.1"
 sanic_session = ">=0.1.2"
 schedule = "*"
