--- a/Pipfile
+++ b/Pipfile
@@ -19,7 +19,7 @@ asyncio_redis = ">=0.14.3"
 cchardet = "*"
 gunicorn = "*"
 "html5lib" = "*"
-"Jinja2" = ">=2.9.5"
+Jinja2 = ">=2.10.1"
 motor = "==1.1"
 numpy = "*"
 requests = ">=2.20.0"
@@ -32,4 +32,4 @@ pymongo = "*"
 aiofiles = "*"
 pyquery = "*"
 ruia-ua = "*"
-ruia = "*"
+ruia = ">=0.5.8"
