更新部署方式

--- a/Pipfile
+++ b/Pipfile
@@ -1,7 +1,7 @@
 [[source]]
 verify_ssl = true
 name = "pypi"
-url = "https://pypi.python.org/simple/"
+url = "https://pypi.douban.com/simple/"
 
 [requires]
 python_version = "3.6"
@@ -14,17 +14,17 @@ aiocache = "==0.3.2"
 aiohttp = "*"
 arrow = "*"
 async_timeout = "*"
-asyncio_redis = ">=0.14.3"
+asyncio_redis = "==0.14.3"
 "bs4" = "*"
 cchardet = "*"
 gunicorn = "*"
 "html5lib" = "*"
-Jinja2 = ">=2.10.1"
+Jinja2 = "==2.10.1"
 motor = "==1.1"
 numpy = "*"
 requests = ">=2.20.0"
-Sanic = ">=0.5.1"
-sanic_session = ">=0.1.2"
+Sanic = "==0.5.1"
+sanic_session = "==0.1.2"
 schedule = "*"
 uvloop = "*"
 pytest = "*"
