--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ name = "pypi"
 url = "https://pypi.douban.com/simple/"
 
 [requires]
-python_version = "3.6"
+python_version = "3.9"
 
 [dev-packages]
 
@@ -16,12 +16,12 @@ async_timeout = "*"
 cchardet = "*"
 gunicorn = "*"
 "html5lib" = "*"
-Jinja2 = "==2.11.3"
-motor = "==1.1"
+Jinja2 = ">=2.11.3"
+motor = ">=1.1"
 numpy = "*"
 requests = ">=2.20.0"
-Sanic = "==0.5.1"
-sanic_session = "==0.1.2"
+Sanic = ">=0.5.1"
+sanic_session = ">=0.1.2"
 schedule = "*"
 uvloop = "*"
 pytest = "*"
@@ -30,6 +30,6 @@ aiofiles = "*"
 pyquery = "*"
 ruia-ua = "*"
 ruia = ">=0.5.8"
-aiocache = "==0.3.2"
-aioredis = "==0.3.3"
-asyncio_redis = "==0.14.3"
+aiocache = ">=0.3.2"
+aioredis = ">=0.3.3"
+asyncio_redis = ">=0.14.3"
